--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,17 @@
 plugins {
-    id "com.github.lkishalmi.gatling" version "0.3.1"
+    id 'scala'
+    id "com.github.lkishalmi.gatling" version "3.0.2"
 }
 
-apply plugin: 'scala'
+dependencies {
+    compile 'org.scala-lang:scala-library:2.12.3'
+}
 
 repositories {
     jcenter()
 }
 
-dependencies {
-    compile 'org.scala-lang:scala-library:2.11.7'
-}
-
 gatling {
-    toolVersion = '2.2.2'
-    jvmArgs = [ '-server', '-Xms512M', '-Xmx512M' ]
+    toolVersion = '3.1.2'
     simulations = { include "**/*Simulation.scala" }
 }
